# avp-ros

./: README.md
src/LMS1xx/src/: LMS1xx_node.cpp
src/avp_base/: CMakeLists.txt  package.xml
src/avp_base/scripts/: avp_base.py
src/avp_bringup/: CMakeLists.txt  package.xml
src/avp_bringup/launch/: fake_pi_robot.launch  fake_turtlebot.launch
src/avp_description/: CMakeLists.txt  package.xml
src/avp_description/launch/: test_pi_robot.launch  test_turtlebot_with_head.launch
src/avp_description/urdf/: arm.xacro  arm_hardware.xacro  head.xacro  head_hardware.xacro  pi_robot.urdf  pi_robot.xacro  pi_robot_arm.xacro  pi_robot_arm_hardware.xacro  pi_robot_head.xacro  pi_robot_head_hardware.xacro  turtlebot.urdf.xacro  turtlebot.xacro  turtlebot_body.urdf.xacro  turtlebot_hardware.urdf.xacro  turtlebot_hardware.xacro  turtlebot_kinect.urdf.xacro  turtlebot_with_head.xacro
src/avp_sim_nav/: CMakeLists.txt  package.xml  setup.py  sim.rviz
src/avp_stdr_sim/: CMakeLists.txt  package.xml
src/avp_stdr_sim/launch/: avp_stdr.launch
src/avp_stdr_sim/resources/robots/: avp.xml
src/avp_stdr_sim/rviz/: config.rviz
src/avp_stdr_sim/scripts/: controller_node.py
src/landmark_detector/: CMakeLists.txt  package.xml
src/landmark_detector/launch/: run.launch
src/landmark_detector/scripts/: landmark_detector.py
src/sim_template/: CMakeLists.txt  package.xml  setup.py
src/sim_template/launch/: run.launch
src/sim_template/scripts/: test2.py  timed_out_and_back.py
src/sim_template/src/example_lib/: print.py
