<package>
  <name>avp_description</name>
  <version>0.0.0</version>

  <description>URDF/Xacro Package</description>

  <maintainer email="r@avp.com">AVP</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>

  <export>

  </export>
</package>